refractoring final for Contrast Finder v0.2